public/stylesheets/rails_admin/list.css
.grid {
  width: 100%;
  border-collapse:collapse;
}

.grid thead th {
  border-bottom:2px solid #b9b9b9;
  padding: 9px 0;
  text-align:center;
}

.grid thead th a {
  display: inline-block;
  background-repeat: no-repeat;
  background-position: right;
  text-decoration:none;
  color:#000;
}

.grid thead th.selected a {
  padding: 0 20px 0 0;
}

.grid thead th a.ascending {
  background-image: url(../../images/rails_admin/bullet_arrow_up.png);
}

.grid thead th a.descending {
  background-image: url(../../images/rails_admin/bullet_arrow_down.png);
}

.grid tr.link:hover {
  background-color: #B9DAFC;
  cursor: pointer;
}

.grid tbody .boolean {
  margin-bottom:-5px;
}

.grid tbody .date,
.grid tbody .datetime,
.grid tbody .time,
.grid tbody .timestamp {
  white-space: nowrap;
}

.grid tbody .other a {
  padding-left:2px;
  padding-right:2px;
  text-decoration:none;
  border:1px solid #B9B9B9;
  background:#FFF;
  color:#494949;
}

.grid tbody .other a:hover {
  border:1px solid #494949;
}

.grid tbody .action a {
  text-decoration:none;
  font-weight:bold;
}

.grid tbody .action a:hover {
  text-decoration:underline;
}

.grid .action.edit a {
  color:#5182ab;
}

.grid .action.delete a {
  color:#ad0208;
}

.grid thead .action {
  font-size:10px;
  margin-top:1px;
}

.grid thead .selected {
  font-weight:bold;
}

.grid tbody td {
  border-bottom:1px solid #b9b9b9;
  padding: 9px 0;
  text-align:center;
}

.grid tbody .even {
  background:#f2f2f2;
}

.grid .pagination {
  padding-top:10px;
}

.grid .pagination a {
  background:#FFF;
  color:#000;
  border:1px solid #DDD;
  padding:6px;
  padding-top:3px;
  padding-bottom:4px;
  text-decoration:none;
}

.grid .pagination a:hover {
  background:#EEE;
  border:1px solid #494949;
}

.grid tfoot .bulk {
  float: right;
  margin-top: 8px;
}

.this-page {
  padding:3px;
}

.historyLink {
  color:#000;
  text-decoration:none;
}

.historyLink:hover {
  text-decoration:underline;
}

